# managerial-accountability-study-2026

./: .gitignore  main.py  pyproject.toml
data/prolific/: prolific_demographic_export_6a044bac63eb157a7001dad4.csv
data/soci/: data_ntnu_survey_2026-05-15_12-01.csv
data/soci/0-250/: cleaned.csv  codebook_ntnu_survey_2026-05-15_12-02.xlsx  values_ntnu_survey_2026-05-15_12-02.csv
data/soci/0-300/: cleaned.csv  codebook_ntnu_survey_2026-05-15_15-37.xlsx  data_ntnu_survey_2026-05-15_15-37.csv  variables_ntnu_survey_2026-05-15_15-37.csv
data/student bullshit/: codebook_ntnu_survey_2026-05-14_14-00.xlsx  data_ntnu_survey_2026-05-14_13-57 ONLY ANSWERED QUESTIONS.csv  ordered_relevant_columns_no_missing.csv
notebooks/: 00_start.ipynb  01_pls.ipynb
